--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -19,4 +19,72 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/confirmButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/imageSwitch"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:text="@string/show_images"
+            app:layout_constraintEnd_toEndOf="@+id/cloudSwitch"
+            app:layout_constraintStart_toStartOf="@+id/cloudSwitch"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/cloudSwitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:padding="16dp"
+            android:text="@string/use_cloud_database"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageSwitch" />
+
+        <TextView
+            android:id="@+id/idTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/database_id"
+            android:textColor="@color/light_gray"
+            app:layout_constraintEnd_toEndOf="@+id/cloudSwitch"
+            app:layout_constraintStart_toStartOf="@+id/cloudSwitch"
+            app:layout_constraintTop_toBottomOf="@+id/cloudSwitch" />
+
+        <EditText
+            android:id="@+id/editDBID"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:ems="6"
+            android:gravity="center"
+            android:imeOptions="actionDone"
+            android:inputType="none"
+            android:maxLength="6"
+            android:textColor="@color/light_gray"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="@+id/cloudSwitch"
+            app:layout_constraintStart_toStartOf="@+id/cloudSwitch"
+            app:layout_constraintTop_toBottomOf="@+id/idTV" />
+
+        <TextView
+            android:id="@+id/instructionsTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/instructuons"
+            android:textColor="@color/light_gray"
+            app:layout_constraintEnd_toEndOf="@+id/editDBID"
+            app:layout_constraintStart_toStartOf="@+id/editDBID"
+            app:layout_constraintTop_toBottomOf="@+id/editDBID" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
