--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -14,8 +14,8 @@
         android:id="@+id/saved_games" app:showAsAction="never" android:title="@string/saved_games">
     </item>
     <item
-        android:id="@+id/images_switch"
-        android:title="@string/show_images"
+        android:id="@+id/settings"
+        android:title="@string/settings"
         app:showAsAction="never"/>
     <item
         android:id="@+id/rules"
