--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -13,7 +13,7 @@
         android:background="@drawable/start_button"
         android:enabled="true"
         android:fontFamily="@font/josefin_sans"
-        android:text="@string/confirm"
+        android:text="@string/confirm_changes"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +63,6 @@
             android:id="@+id/editDBID"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:ems="6"
             android:gravity="center"
             android:imeOptions="actionDone"
@@ -79,7 +78,7 @@
             android:id="@+id/instructionsTV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:text="@string/instructuons"
             android:textColor="@color/light_gray"
             app:layout_constraintEnd_toEndOf="@+id/editDBID"
